[FIX] Mail templates, and reset token header

--- a/src/main/resources/templates/mail-templates/password-reset.html
+++ b/src/main/resources/templates/mail-templates/password-reset.html
@@ -13,20 +13,20 @@
             color: #333;
         }
         .container {
-            width: 100%;
-            max-width: 600px;
+            max-width: 500px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #141b29;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            color: white;
         }
         .header {
             text-align: center;
             padding-bottom: 20px;
         }
         .header img {
-            max-width: 150px;
+            max-width: 230px;
         }
         .content {
             text-align: center;
@@ -42,12 +42,14 @@
         }
         .button {
             display: inline-block;
-            padding: 15px 25px;
-            font-size: 16px;
+            padding: 20px 30px;
+            font-size: 20px;
+            font-weight: bolder;
+            width: 200px;
             color: #ffffff;
-            background-color: #007bff;
+            background-color: #0530cd;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 20px;
             margin-top: 20px;
         }
         .footer {
