--- a/src/main/resources/templates/mail-templates/verification-code.html
+++ b/src/main/resources/templates/mail-templates/verification-code.html
@@ -26,11 +26,12 @@
             padding-bottom: 20px;
         }
         .header img {
-            max-width: 150px;
+            max-width: 200px;
         }
         .content {
             text-align: center;
             padding: 20px;
+            color: white;
         }
         .content h1 {
             font-size: 24px;
@@ -49,6 +50,8 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             margin: 20px 0;
+            background: #2a2d3e;
+            color: #c2c1c5;
         }
         .footer {
             text-align: center;
@@ -56,6 +59,11 @@
             color: #888;
             padding: 20px;
             border-top: 1px solid #ddd;
+        }
+        .container{
+            background: #141b29;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
