--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,118 +1,162 @@
 <!doctype html>
 <html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Detalhes do Filme</title>
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
     />
-    <link rel="icon" href="/images/favicon.ico" type="image/png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="/images/favicon.ico" type="image/png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap"
+            rel="stylesheet"
     />
     <!-- Custom Styles -->
-    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
-    <link th:href="@{/css/ratings.css}" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <!-- NavBar-->
-    <header th:insert="navbar.html :: nav" class="sticky-top"></header>
-    <!-- Seção de detalhes do movie -->
-    <div
-      class="movie-background"
-      th:style="'background-image: url(' + ${details.backgroundImgUrl} + ');'"
-    >
-      <div class="movie-overlay d-flex align-items-center">
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/ratings.css}" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+<!-- NavBar-->
+<header th:insert="navbar.html :: nav" class="sticky-top"></header>
+<!-- Seção de detalhes do movie -->
+<div
+        class="movie-background"
+        th:style="'background-image: url(' + ${details.backgroundImgUrl} + ');'"
+>
+    <div class="movie-overlay d-flex align-items-center">
         <div class="container movie-content">
-          <div class="row">
-            <div class="col-md-6">
-              <h1 class="movie-details-title">[[${details.title}]]</h1>
-                <!--
-                  <p
-                class="movie-genre"
-                th:each="genre : ${details.genres}"
-                style="display: inline-block"
-              >
-                <span class="badge" th:text="${genre}">Genre name</span>
-              </p> -->
-              <div class="movie-actions">
-                <a th:href="@{'/play/'+ ${details.rid}}">
-                  <button
-                    type="button"
-                    class="btn btn-primary btn-lg me-2"
-                    th:text="#{play}"
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="movie-details-title">[[${details.title}]]</h1>
+                    <!--
+                      <p
+                    class="movie-genre"
+                    th:each="genre : ${details.genres}"
+                    style="display: inline-block"
                   >
-                    Play
-                  </button>
-                </a>
-                <a th:href="@{${details.trailerUrl}}" target="_blank">
-                  <button
-                    type="button"
-                    class="btn btn-outline-light btn-lg"
-                    th:text="#{trailer}"
-                  >
-                    Trailer
-                  </button>
-                </a>
-              </div>
+                    <span class="badge" th:text="${genre}">Genre name</span>
+                  </p> -->
+                    <div class="movie-actions">
+                        <a th:href="@{'/play/'+ ${details.rid}}">
+                            <button
+                                    type="button"
+                                    class="btn btn-primary btn-lg me-2"
+                                    th:text="#{play}"
+                            >
+                                Play
+                            </button>
+                        </a>
+                        <a th:href="@{${details.trailerUrl}}" target="_blank">
+                            <button
+                                    type="button"
+                                    class="btn btn-outline-light btn-lg trailer"
+                                    th:text="#{trailer}"
+                            >
+                                Trailer
+                            </button>
+                        </a>
+                        <a>
+                            <button
+                                    type="button"
+                                    class="btn btn-outline-light btn-lg addtowatch"
+                            >
+                                +
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row movie-description">
-            <div class="col-md-8">
-              <h3 th:text="#{synopsis}">Synopsis</h3>
-              <p>[[${details.synopsis}]]</p>
+            <div class="row movie-description">
+                <div class="col-md-8">
+                    <h3 th:text="#{synopsis}">Synopsis</h3>
+                    <p>[[${details.synopsis}]]</p>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
+</div>
+
+<div class="tabs-container">
+
+    <div class="tabs">
+        <button class="tab active" data-target="sinopse">Sinopse</button>
+        <button class="tab" data-target="elenco">Elenco</button>
+        <button class="tab" data-target="extras">Extras</button>
+        <button class="tab" data-target="ratings-container">Avaliações</button>
     </div>
 
-   <div class="contains-ratings">
-    <div class="container" id="ratings">
-      <!-- Cards de avaliações -->
+    <div id="sinopse" class="content active">
+        <p>Após os eventos devastadores de "Guerra Infinita", os Vingadores devem reunir forças para reverter as ações
+            de Thanos.</p>
+    </div>
+    <div id="elenco" class="content">
+        <p>Elenco: Robert Downey Jr., Chris Evans, Scarlett Johansson, Chris Hemsworth...</p>
+    </div>
+    <div id="extras" class="content">
+        <p>Making of, entrevistas com os atores, bastidores das gravações e muito mais!</p>
+    </div>
+    <div class="content contains-ratings" id="ratings-container">
+        <div class="container" id="ratings">
+            <!-- Cards de avaliações -->
 
-  
-      <!-- Formulário de avaliação -->
-      <div class="review-form">
-          <h2>Add Your Review</h2>
-  
-          <!-- Estrelas para a avaliação -->
-          <div class="stars" id="starRating">
-              <button class="star" data-value="1">&#9733;</button>
-              <button class="star" data-value="2">&#9733;</button>
-              <button class="star" data-value="3">&#9733;</button>
-              <button class="star" data-value="4">&#9733;</button>
-              <button class="star" data-value="5">&#9733;</button>
-          </div>
-  
-          <!-- Formulário -->
-          <input type="text" style="display: none;" th:value="${details.rid}" id="movie-rid">
-          <input type="text" id="name" placeholder="Your Name" style="color: white;">
-          <textarea id="review" placeholder="Write your review here..." style="color: white;"></textarea>
-          <button id="submitReview">Submit Review</button>
-      </div>
-  </div>
-   </div>
-  
 
-    <footer
-      th:insert="footer.html :: footer"
-      class="rodape"
-      style="margin-top: 150px"
-    ></footer>
+            <!-- Formulário de avaliação -->
+            <div class="review-form">
+                <h2>Add Your Review</h2>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/sockjs/1.0.2/sockjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-    <script th:src="@{/js/jquery-3.7.1.js}"></script>
-    <script type="module" th:src="@{/js/notification.js}"></script>
-    <script type="module" th:src="@{/js/ratings.js}"></script>
-  </body>
+                <!-- Estrelas para a avaliação -->
+                <div class="stars" id="starRating">
+                    <button class="star" data-value="1">&#9733;</button>
+                    <button class="star" data-value="2">&#9733;</button>
+                    <button class="star" data-value="3">&#9733;</button>
+                    <button class="star" data-value="4">&#9733;</button>
+                    <button class="star" data-value="5">&#9733;</button>
+                </div>
+
+                <!-- Formulário -->
+                <input type="text" style="display: none;" th:value="${details.rid}" id="movie-rid">
+                <input type="text" id="name" placeholder="Your Name" style="color: white;">
+                <textarea id="review" placeholder="Write your review here..." style="color: white;"></textarea>
+                <button id="submitReview">Submit Review</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<footer
+        th:insert="footer.html :: footer"
+        class="rodape"
+        style="margin-top: 150px"
+></footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/sockjs/1.0.2/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script th:src="@{/js/jquery-3.7.1.js}"></script>
+<script type="module" th:src="@{/js/notification.js}"></script>
+<script type="module" th:src="@{/js/ratings.js}"></script>
+<script>
+    const tabs = document.querySelectorAll(".tab");
+    const contents = document.querySelectorAll(".content");
+
+    tabs.forEach(tab => {
+        tab.addEventListener("click", () => {
+            // Remover a classe "active" de todas as abas e conteúdos
+            tabs.forEach(t => t.classList.remove("active"));
+            contents.forEach(c => c.classList.remove("active"));
+
+            // Adicionar a classe "active" na aba e no conteúdo selecionado
+            tab.classList.add("active");
+            document.getElementById(tab.dataset.target).classList.add("active");
+        });
+    });
+</script>
+</body>
 </html>
