--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="/images/favicon.ico" type="image/png" />
+    <link rel="icon" href="/icons/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+    <link rel="manifest" href="/manifest.json">
 
     <meta
       name="description"
@@ -201,5 +203,13 @@
 
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
     <script type="module" th:src="@{/js/notification.js}"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/service-worker.js')
+              .then(() => console.log("Service Worker registrado!"))
+              .catch(err => console.log("Erro ao registrar Service Worker:", err));
+      }
+    </script>
+
   </body>
 </html>
