--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -132,7 +132,7 @@
 <footer
         th:insert="footer.html :: footer"
         class="rodape"
-        style="margin-top: 150px"
+        style="margin-top: 50dvh"
 ></footer>
 
 <!-- Bootstrap JS -->
