--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,7 +96,7 @@
     </button>
 </div>
 
-<!-- Movie Section -->
+<!-- Video Section -->
 <div class="container mt-5 recommended-section">
     <h2 class="mb-4" th:text="#{recommend}">Recommended For You</h2>
     <div class="row row-cols-2 row-cols-md-4 g-4">
