--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -16,10 +16,10 @@
                     <a class="nav-link" th:href="@{/list}" style="font-size:20px" th:text="#{movies}">Movies</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="font-size:20px" th:text="#{series}">Series</a>
+                    <a class="nav-link" th:href="@{/series}" style="font-size:20px" th:text="#{series}">Series</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="font-size:20px" th:text="#{myList}">WatchList</a>
+                    <a class="nav-link" th:href="@{/watchlist}" style="font-size:20px" th:text="#{myList}">WatchList</a>
                 </li>
                 <!-- Notifications Dropdown -->
                 <li class="nav-item"  id="notifyButton">
