--- a/src/main/resources/templates/mail-templates/password-reset.html
+++ b/src/main/resources/templates/mail-templates/password-reset.html
@@ -12,6 +12,7 @@
             padding: 0;
             color: #333;
         }
+
         .container {
             max-width: 500px;
             margin: 0 auto;
@@ -21,25 +22,31 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: white;
         }
+
         .header {
             text-align: center;
             padding-bottom: 20px;
         }
+
         .header img {
             max-width: 230px;
         }
+
         .content {
             text-align: center;
             padding: 20px;
         }
+
         .content h1 {
             font-size: 24px;
             margin-bottom: 20px;
         }
+
         .content p {
             font-size: 16px;
             margin-bottom: 20px;
         }
+
         .button {
             display: inline-block;
             padding: 20px 30px;
@@ -52,6 +59,7 @@
             border-radius: 20px;
             margin-top: 20px;
         }
+
         .footer {
             text-align: center;
             font-size: 14px;
@@ -62,21 +70,22 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <img th:src="@{ ${baseUrl} + '/images/logo.png'}" alt="Logo">
-        </div>
-        <div class="content">
-            <h1 th:text="#{redefinition}">Redefinição de Senha</h1>
-            <p th:text="#{greeting}">Olá,</p>
-            <p th:text="#{main-password-reset}">Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:</p>
-            <a th:href="@{${baseUrl} + '/auth/user/'+ ${token}}" class="button" th:text="#{reset}">Redefinir Senha</a>
-            <p th:text="#{ignore-password-reset}">Se você não solicitou a redefinição de senha, ignore este email.</p>
-        </div>
-        <div class="footer" th:text="#{rightsWithAdd}">
-            &copy; 2024 OpenStreamify. Todos os direitos reservados.<br>
-            230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
-        </div>
+<div class="container">
+    <div class="header">
+        <img th:src="@{ ${baseUrl} + '/images/logo.png'}" alt="Logo">
     </div>
+    <div class="content">
+        <h1 th:text="#{redefinition}">Redefinição de Senha</h1>
+        <p th:text="#{greeting}">Olá,</p>
+        <p th:text="#{main-password-reset}">Recebemos uma solicitação para redefinir a senha da sua conta. Clique no
+            botão abaixo para redefinir sua senha:</p>
+        <a th:href="@{${baseUrl} + '/auth/user/'+ ${token}}" class="button" th:text="#{reset}">Redefinir Senha</a>
+        <p th:text="#{ignore-password-reset}">Se você não solicitou a redefinição de senha, ignore este email.</p>
+    </div>
+    <div class="footer" th:text="#{rightsWithAdd}">
+        &copy; 2024 OpenStreamify. Todos os direitos reservados.<br>
+        230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
+    </div>
+</div>
 </body>
 </html>
