--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,10 +1,12 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml" style="background-color:#2a2d3e;">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml"
+     style="background-color:#2a2d3e;">
     <div class="container">
         <a class="navbar-brand" th:href="@{/}">
             <img th:src="@{/images/logo.png}" alt="OpenStreamify" style="height: 80px; margin: -12px;">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -22,10 +24,11 @@
                     <a class="nav-link" th:href="@{/watchlist}" style="font-size:20px" th:text="#{myList}">WatchList</a>
                 </li>
                 <!-- Notifications Dropdown -->
-                <li class="nav-item"  id="notifyButton">
+                <li class="nav-item" id="notifyButton">
                     <a class="nav-link position-relative" style="font-size:20px;display: inline-block;">
                         Notificações
-                        <span  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="countNot">
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                              id="countNot">
                         <span class="visually-hidden">unread messages</span>
                     </span>
                     </a>
@@ -37,13 +40,14 @@
                 </li>
                 <!-- User Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 50px;">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 50px;">
                         <img src="https://via.placeholder.com/30" class="rounded-circle" alt="User Avatar">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                         <li><a class="dropdown-item" href="#" th:text="#{profile}">Profile</a></li>
                         <li><a class="dropdown-item" href="#" th:text="#{settings}">Settings</a></li>
-                        <li><a class="dropdown-item"  th:href="@{/admin}">Admin</a></li>
+                        <li><a class="dropdown-item" th:href="@{/admin}">Admin</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
