--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Update Password - OpenStreamify</title>
-  <link rel="icon" href="/images/favicon.ico" type="image/png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link
-      href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Update Password - OpenStreamify</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+            href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap"
+            rel="stylesheet"
     />
-  <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="container main-container">
-  <div class="card col-md-4 col-sm-12">
-    <div class="card-header">
-      <img th:src="@{/images/logo.png}" alt="Openstreamify Logo" class="openstreamyfy-logo">
-      <h4>Update Your Password</h4>
-    </div>
-    <div class="card-body" style="display:block;">
-      <p class="text-center">Please enter your new password below. Make sure it is strong and secure.</p>
-      <form id="updatePasswordForm">
-        <div class="mb-3">
-          <input type="hidden" class="form-control" id="email"  th:value="${email}" required>
-        <div class="mb-3">
-          <label for="newPassword" class="form-label">New Password</label>
-          <input type="password" class="form-control" id="newPassword" placeholder="Enter your new password" required>
+    <div class="card col-md-4 col-sm-12">
+        <div class="card-header">
+            <img th:src="@{/images/logo.png}" alt="Openstreamify Logo" class="openstreamyfy-logo">
+            <h4>Update Your Password</h4>
         </div>
-        <div class="mb-3">
-          <label for="confirmPassword" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your new password" required>
+        <div class="card-body" style="display:block;">
+            <p class="text-center">Please enter your new password below. Make sure it is strong and secure.</p>
+            <form id="updatePasswordForm">
+                <div class="mb-3">
+                    <input type="hidden" class="form-control" id="email" th:value="${email}" required>
+                    <div class="mb-3">
+                        <label for="newPassword" class="form-label">New Password</label>
+                        <input type="password" class="form-control" id="newPassword"
+                               placeholder="Enter your new password" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirmPassword" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirmPassword"
+                               placeholder="Confirm your new password" required>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Update Password</button>
+                    </div>
+            </form>
         </div>
-        <div class="d-grid">
-          <button type="submit" class="btn btn-primary">Update Password</button>
+        <div class="card-footer">
+            <a th:href="@{'/auth/login'}" class="footer-link">Back to Login</a>
         </div>
-      </form>
     </div>
-    <div class="card-footer">
-      <a th:href="@{'/auth/login'}" class="footer-link">Back to Login</a>
-    </div>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
